# fbpcs

./: CONTRIBUTING.md  README.md  build-docker-tee-experiment.sh  build-docker.sh  extract-docker-binaries.sh  upload-binaries-to-s3-test.sh  upload-binaries-to-s3.sh  upload_binaries_and_verify_identical_paths.sh
.github/workflows/: README.md  build_and_publish_onedocker.yml  build_binary_image.yml  build_binary_images.yml  build_coordinator.yml  build_data_processing_image.yml  build_emp_games_image.yml  build_fbpcs_images.yml  build_onedocker.yml  coordinator-publish.yml  create-hotfix.yml  docker-publish.yml  docker-tag.yml  e2e_test_cron.yml  end_to_end_tests.yml  extract_and_upload_binaries.yml  local_e2e_test.yml  one_command_runner_test.yml  pa-e2e.yml  pa_one_command_runner_test.yml  pid_publish_docker.yml  pl-e2e.yml  promote_binaries.yml  publish_image_to_ecr.yml  rc_one_command_runner.yml  rc_one_command_runner_test.yml  rc_udp_one_command_runner_test.yml  tag_bundle_commit.yml  test.yml
.github/workflows/e2e_tests/: one_command_runner_test.yml  pa_one_command_runner_test.yml
binaries_out_lists/: data_processing.txt  emp_games.txt  pid.txt  smart_agent.txt  validation.txt
docker/: get_make_options.sh  make_and_install_binary.sh
docker/data_processing/: CMakeLists.txt  Dockerfile.ubuntu  run-attribution_id_combiner-test.sh
docker/emp_games/: CMakeLists.txt  Dockerfile.ubuntu  common.cmake  perf_tools.cmake  run-attribution-sample.sh  run-lift-calculator-sample.sh  run-shard-aggregator-sample.sh
docker/onedocker/: Dockerfile.ubuntu
docker/onedocker-bt/: Dockerfile.ubuntu
docker/onedocker/opa_workflows/: tls_workflow.json
docker/onedocker/plugins/: tls_cert_installer.py  write_routing.sh
docker/onedocker/prod/: Dockerfile.ubuntu  pip-requirements.txt  pip_requirements.txt
docker/onedocker/test/: Dockerfile.ubuntu
docker/pce_deployment/: Dockerfile.ubuntu
docker/pce_deployment/gcp/: Dockerfile.ubuntu
docker/tee_experiment/: CMakeLists.txt  Dockerfile.ubuntu  README.md  run-lift-on-tee.sh
docker/tee_experiment/sample_input/: partner_1k_0  publisher_1k_0
docs/: PrivateLift.md  PrivateRCT.md  README.md  changelog.md
fbpcs/: CHANGELOG.md  Dockerfile  onedocker_binary_config.py  onedocker_binary_names.py  onedocker_service_config.py  pip_requirements.txt
fbpcs/bolt/: bolt_checkpoint.py  bolt_client.py  bolt_hook.py  bolt_job.py  bolt_job_summary.py  bolt_runner.py  bolt_summary.py  bolt_test.yml  constants.py  exceptions.py  manual_test.yml  oss_bolt_pcs.py  read_config.py
fbpcs/bolt/hooks/: exception_thrower.py  stage_canceller.py
fbpcs/bolt/test/: test_bolt_hook.py  test_bolt_job.py  test_bolt_job_summary.py  test_bolt_runner.py  (+2 more)
fbpcs/data_processing/: README.md
fbpcs/emp_games/: README.md
fbpcs/input_data_validation/: constants.py  enums.py  header_validator.py  input_data_validation_cli.py  input_data_validation_issues.py  input_data_validator.py  line_ending_validator.py  row_validator.py  validation_issues.py  validation_report.py  validation_runner.py  validator.py  validators_runner.py
fbpcs/kodiak/: Cargo.toml
fbpcs/pa_coordinator/: pa_coordinator.py
fbpcs/pc_pre_validation/: binaries_accessibility_validator.py  binary_file_validator.py  binary_path.py  constants.py  enums.py  exceptions.py  input_data_validation_issues.py  input_data_validator.py  pc_pre_validation_cli.py  validation_report.py  validator.py  validators_runner.py
fbpcs/pc_translator/: PCTranslator.cpp  PCTranslator.h
fbpcs/pcf/: derived_metrics.py  errors.py  games.py  networking.py  private_computation_framework.py  structs.py
fbpcs/performance_tools/: CostEstimation.cpp  CostEstimation.h
fbpcs/pid_coordinator/: pid_coordinator.py
fbpcs/pl_coordinator/: bolt_graphapi_client.py  constants.py  exceptions.py  pc_calc_instance.py  pc_graphapi_utils.py  pc_partner_instance.py  pc_publisher_instance.py  pl_coordinator.py  pl_graphapi_utils.py  pl_instance_runner.py  pl_service_wrapper.py  pl_study_runner.py  token_validation_rules.py  token_validator.py
fbpcs/post_processing_handler/: exception.py  post_processing_handler.py  post_processing_instance.py
fbpcs/private_computation/: pc_attribution_runner.py
fbpcs/private_computation_cli/: config.yml  private_computation_cli.py  private_computation_service_wrapper.py
fbpcs/scripts/: gen_config.py  gen_fake_data.py  gen_ids_from_spine.py  gen_pid_stress_test_data.py  run_fbpcs.sh  run_pid_stress_test.sh  upload_pid_stress_test_data_to_aws.sh
fbpcs/service/: workflow.py  workflow_mwaa.py  workflow_sfn.py  workflow_sfn_fb.py
fbpcs/smart_agent/: handler.py  server.py
fbpcs/stage_flow/: exceptions.py  stage_flow.py  stage_flow_json_encoder.py
fbpcs/tests/: replace_task_definition.py
fbpcs/utils/: abstract_file_ctx.py  buffered_s3_file_handler.py  color.py  deprecated.py  json.py  logger_adapter.py  optional.py
fbpmp/: Dockerfile  pip_requirements.txt
fbpmp/data_processing/: README.md  build-docker.sh  extract-docker-binaries.sh
fbpmp/data_processing/docker/: CMakeLists.txt  Dockerfile.ubuntu  run-attribution_id_combiner-test.sh
fbpmp/emp_games/: README.md  build-docker.sh  extract-docker-binaries.sh
fbpmp/infra/: Readme.md
fbpmp/pa_coordinator/: config.yml  pa_coordinator.py
fbpmp/pcf/: call_process.py  derived_metrics.py  games.py  private_computation_framework.py
fbpmp/pid_coordinator/: config.yml  pid_coordinator.py
fbpmp/pl_coordinator/: config.yml  pl_coordinator.py  pl_graphapi_utils.py  pl_instance_runner.py  pl_service_wrapper.py  pl_study_runner.py
fbpmp/post_processing_handler/: post_processing_handler.py  post_processing_instance.py
fbpmp/private_computation_cli/: config.yml
fbpmp/scripts/: gen_config.py  gen_fake_data.py  run_fbpmp.sh
fbpmp/utils/: abstract_file_ctx.py  buffered_s3_file_handler.py  json.py
hotfix_scripts/: find_base_commit.sh
promote_scripts/: promote_binaries.sh  promote_image.sh
upload_scripts/: upload-binaries-using-onedocker.sh
upload_scripts/configs/: test_upload_binaries_config.yml  upload_binaries_config.yml
(+1809 files in other folders)
